fix extracting files with single-character names

Functions _g_path_get_relative_basename() and compute_base_path()
incorrectly check the length of the passed path against the length of
the base directory for equality.

In the case the lengths match, path + base_dir_len will not be an
out-of-bounds read.

https://bugzilla.gnome.org/show_bug.cgi?id=761582